# Xilinx_VVAS

./: build_install_vvas.sh  cpu.amd.dev.dockerfile  run_build.sh
.devcontainer/: devcontainer-cpu.json  devcontainer.json
vvas-accel-sw-libs/: .clang-format  build.py  meson.build  meson_options.txt  readme.md  requirements.txt
vvas-accel-sw-libs/subprojects/: .gitignore  nng.wrap
vvas-accel-sw-libs/utils/: vvas_accel_utils.c  vvas_accel_utils.h
vvas-accel-sw-libs/vms_live_event_sender/: meson.build
vvas-accel-sw-libs/vms_live_event_sender/datamodels/inc/: byte_order_utils.h  event_output_v200.h  job.h  v_frame_meta.h
vvas-accel-sw-libs/vms_live_event_sender/datamodels/src/: event_output_v200.cpp  job.cpp  v_frame_meta.cpp
vvas-accel-sw-libs/vms_live_event_sender/inc/: vms_live_event_sender.h
vvas-accel-sw-libs/vms_live_event_sender/src/: vms_live_event_sender.cpp
vvas-accel-sw-libs/vvas_vtpl_fire_smoke/: meson.build
vvas-accel-sw-libs/vvas_vtpl_fire_smoke/src/: vvas_vtpl_fire_smoke.cpp
vvas-accel-sw-libs/vvas_vtpl_people_fall/: meson.build
vvas-accel-sw-libs/vvas_vtpl_people_fall/src/: vvas_vtpl_people_fall.cpp
vvas-gst-plugins/: meson.build
vvas-gst-plugins/gst-libs/gst/vvas/: gstinferenceprediction.c
